# prismg

./: LICENSE  README.md  bootstrap.py  leaky_baseline_generator.ipynb  pyproject.toml  safe_binomial_generator_binomial.ipynb  score.py  testing.ipynb  tutorial.ipynb
metrics/: kri.py  pli.py  tli.py
prismg/: grm.py  kri.py  kri_diagnostics.py  pli.py  score.py  tli.py  vcf_reader.py
src/prismg/diagnostics/: pli_diag
src/prismg/io/: vcf_reader.py
src/prismg/metrics/: kri.py  pli.py  tli.py
src/prismg/utils/: diag.py  grm.py  plotting.py
