[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "prismg"
version = "1.0"
authors = [
  { name="Alejandro Correa Rojo", email="alejandro.correarojo@esat.kuleuven.be" },
]
description = "PRISM-G: Privacy Risk Integrated Score for Multi-representation Genomes."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/alejocrojo09/prismg"
Issues = "https://github.com/alejocrojo09/prismg/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/prismg"]